添加树形菜单查询、device设备一对多查询

--- a/src/main/resources/static/功能分析.md
+++ b/src/main/resources/static/功能分析.md
@@ -6,3 +6,12 @@
 1、设备组是一个中间表 关联设备表与组表功能实现
 2、各表增删改查     
 3、设备表的关联查询、批量删除、设备启停
+
+SELECT
+	* 
+FROM
+	device d
+	INNER JOIN device_output o
+	INNER JOIN device_param p ON d.NUMBER = o.DEVICE_NUM 
+	AND d.NUMBER = p.DEVICE_NUM 
+	AND d.NUMBER = 1603264530360373
