--- a/src/main/resources/static/功能分析.md
+++ b/src/main/resources/static/功能分析.md
@@ -1,17 +1,15 @@
-##优化问题：
-1、在设备在更新与添加的时候字段显示关联表的信息。
-
-
-##功能实现  第一周
+##功能实现  第1周
 1、设备组是一个中间表 关联设备表与组表功能实现
 2、各表增删改查     
 3、设备表的关联查询、批量删除、设备启停
+##功能实现   第2周
+1、在添加设备的时候，利用设备型号id获取输出表与参数表       
+2、利用设备编号，查询当前设备的输出表与参数表。    
+3、主要完成会使用httpClient去调用别的服务带过来的json字符串  
+4、会使用ObjectMapper对象，进行json字符串的转换（List集合与Java对象）  
+##功能实现   第3周 优化
+1、各个接口方法添加注释  
+2、
 
-SELECT
-	* 
-FROM
-	device d
-	INNER JOIN device_output o
-	INNER JOIN device_param p ON d.NUMBER = o.DEVICE_NUM 
-	AND d.NUMBER = p.DEVICE_NUM 
-	AND d.NUMBER = 1603264530360373
+
+
