通过设备名称查询当前设备的规则链

--- a/src/main/resources/static/功能分析.md
+++ b/src/main/resources/static/功能分析.md
@@ -7,10 +7,11 @@
 2、利用设备编号，查询当前设备的输出表与参数表。    
 3、主要完成会使用httpClient去调用别的服务带过来的json字符串  
 4、会使用ObjectMapper对象，进行json字符串的转换（List集合与Java对象）  
-##功能实现   第3周 优化
+##功能实现   第3周
 1、各个接口方法添加注释  
 2、事务  
-3、
+3、通过设备名称查询当前设备的多条规则链   
+4、
 
 
 
