修改再查询ById时  超出不报异常

--- a/src/main/resources/static/功能分析.md
+++ b/src/main/resources/static/功能分析.md
@@ -10,8 +10,11 @@
 ##功能实现   第3周
 1、各个接口方法添加注释  
 2、事务  
-3、通过设备名称查询当前设备的多条规则链   
-4、能不能实现删除设备的同时删除参数表与输出表
+3、通过设备名称查询当前设备的多条规则链  
+   
+4、能不能实现删除设备的同时删除参数表与输出表  
+5、解决 查询单个超出设备id   不抛异常  （问题）
+
 
 
 
