--- a/src/main/resources/static/功能分析.md
+++ b/src/main/resources/static/功能分析.md
@@ -12,9 +12,9 @@
 2、事务  
 3、通过设备名称查询当前设备的多条规则链  
    
-4、能不能实现删除设备的同时删除参数表与输出表  
+4、解决 能不能实现删除设备的同时删除参数表与输出表  
 5、解决 查询单个超出设备id   不抛异常  （问题）  
-6、多表关联删除
+6、解决  多表关联删除
 
 
 
