添加删除标志于操作标志默认值

--- a/src/main/resources/static/功能分析.md
+++ b/src/main/resources/static/功能分析.md
@@ -15,6 +15,9 @@
 4、解决 能不能实现删除设备的同时删除参数表与输出表  
 5、解决 查询单个超出设备id   不抛异常  （问题）  
 6、解决  多表关联删除
+7、解决 get请求的数据响应到页面上数据是乱码问题  
+8、利用分页插件pageHelper进行分页  
+9、利用MySQL数据库limit进行分页
 
 
 
