--- a/src/main/resources/static/功能分析.md
+++ b/src/main/resources/static/功能分析.md
@@ -1,8 +1,9 @@
-##环境
+##物联网设备
+###环境
 idea 2020.2 、MySQL 8.0.21、Maven 3.6.3、Jdk 1.8
-## swagger项目API接口访问路径
+### swagger项目API接口访问路径
 http://localhost:9090/swagger-ui.html
-##数据库表
+###数据库表
 device  
 device_group  
 device_output  
@@ -10,7 +11,9 @@ device_param
 device_rule  
 device_tag  
 groups 
-##项目目录说明
+###接口规范
+RESTful的Api接口规范
+###项目目录说明
 config   配置文件  
 controller    响应的用户请求的url  
 dto   数据传输  
@@ -25,13 +28,13 @@ resources   静态资源文件
   static    静态资源   
   application.yml  配置   
 test    测试  
-##功能实现  第1周
+###功能实现  第1周
 1、设备组是一个中间表 关联设备表与组表功能实现  
 2、各表增删改查     
 3、批量删除、设备启停   
 4、项目搭建  
 5、项目集成MySQL、mybatis、swagger、JSONObject、lombok、热部署、分页插件、httpClient、jackson、springboot  2.3.4
-##功能实现   第2周
+###功能实现   第2周
 1、在添加设备的时候，利用设备型号id获取输出表与参数表       
 2、利用设备编号，查询当前设备的输出表与参数表。    
 3、主要完成会使用httpClient去调用别的服务带过来的json字符串  
@@ -39,7 +42,7 @@ test    测试
 5、根据组名称查询设备  
 6、逻辑删除  
 7、设备表的关联查询
-##功能实现   第3周
+###功能实现   第3周
 1、各个接口方法添加注释  
 2、事务  
 3、通过设备名称查询当前设备的多条规则链    
@@ -48,7 +51,7 @@ test    测试
 6、解决  多表关联删除  
 7、解决 get请求的数据响应到页面上数据是乱码问题   
 8、利用分页插件pageHelper进行分页  
-9、利用MySQL数据库limit进行分页（未能实现）
+9、利用MySQL数据库limit进行分页（还没有实现成功）
 
 
 
