修改一些代码格式

--- a/src/main/resources/static/功能分析.md
+++ b/src/main/resources/static/功能分析.md
@@ -52,7 +52,8 @@ test    测试
 7、解决 get请求的数据响应到页面上数据是乱码问题   
 8、利用分页插件pageHelper进行分页  
 9、利用MySQL数据库limit进行分页（还没有实现成功）
-
+###异常出处理、响应实体工具类
+统一的异常处理，响应实体
 
 
 
