修改部分功能

--- a/src/main/resources/static/功能分析.md
+++ b/src/main/resources/static/功能分析.md
@@ -13,6 +13,8 @@ device_tag
 groups 
 ###接口规范
 RESTful的Api接口规范
+###异常出处理、响应实体工具类
+统一的异常处理类和响应实体
 ###项目目录说明
 config   配置文件  
 controller    响应的用户请求的url  
@@ -52,8 +54,6 @@ test    测试
 7、解决 get请求的数据响应到页面上数据是乱码问题   
 8、利用分页插件pageHelper进行分页  
 9、利用MySQL数据库limit进行分页（还没有实现成功）
-###异常出处理、响应实体工具类
-统一的异常处理，响应实体
 
 
 
